force-app/main/default/objects/Limit_Alert_Notifier__mdt/Limit_Alert_Notifier__mdt.object-meta.xml
<CustomObject>
    <description>Configuration record for a limit alert notifier.</description>
    <label>Limit Alert Notifier</label>
    <pluralLabel>Limit Alert Notifiers</pluralLabel>
</CustomObject>