force-app/main/default/objects/Limit_Alert_Notifier__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the notifier is active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>