force-app/main/default/objects/Limit_Alert_Notifier__mdt/fields/Additional_Config__c.field-meta.xml
<CustomField>
    <fullName>Additional_Config__c</fullName>
    <description>Additional configuration information. This will be passed verbatim to the configure method of the Apex class implementing the LimitNotifierInterface interface.</description>
    <label>Additional Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>