force-app/main/default/objects/Limit_Alert_Notifier__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>The name of the Apex class that implements the AlertNotifierInterface interface.</description>
    <label>Apex Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>