force-app/main/default/objects/Limit_Alert_Notifier__mdt/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <description>The namespace that the Apex class is part of</description>
    <label>Namespace</label>
    <length>80</length>
    <type>Text</type>
</CustomField>